# monero

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  Makefile
cmake/: CheckTrezor.cmake  FindLibUSB.cmake  test-libusb-version.c  test-protobuf.cpp
contrib/epee/include/: misc_log_ex.h  string_tools.h  wipeable_string.h
contrib/epee/include/net/: abstract_tcp_server2.inl  connection_basic.hpp  net_helper.h  net_utils_base.h
contrib/epee/src/: connection_basic.cpp  mlocker.cpp  net_ssl.cpp  wipeable_string.cpp
contrib/fuzz_testing/: fuzz.sh
docker/: README.md  build-contrib.sh  install-cmake.sh
docker/tests/: Dockerfile
src/: CMakeLists.txt  cryptonote_config.h
src/blockchain_db/: blockchain_db.cpp  blockchain_db.h  testdb.h
src/blockchain_db/lmdb/: db_lmdb.cpp  db_lmdb.h
src/blockchain_utilities/: CMakeLists.txt  blockchain_blackball.cpp
src/common/: CMakeLists.txt  boost_serialization_helper.h  timings.cc  util.cpp
src/crypto/: CMakeLists.txt  chacha.c  chacha.h  crypto.h  generic-ops.h  keccak.c  keccak.h  poly1305.c  poly1305.h  random.c  rx-slow-hash.c  slow-hash.c
src/cryptonote_basic/: account.cpp  account.h  connection_context.h  cryptonote_basic.h  cryptonote_basic_impl.cpp  cryptonote_boost_serialization.h  cryptonote_format_utils.cpp  cryptonote_format_utils.h  miner.cpp  miner.h
src/cryptonote_core/: blockchain.cpp  blockchain.h  cryptonote_core.cpp  cryptonote_core.h  cryptonote_tx_utils.cpp  cryptonote_tx_utils.h  tx_pool.cpp
src/cryptonote_protocol/: cryptonote_protocol_handler.h  cryptonote_protocol_handler.inl
src/daemon/: CMakeLists.txt  command_parser_executor.cpp  command_parser_executor.h  command_server.cpp  rpc_command_executor.cpp  rpc_command_executor.h
src/device/: CMakeLists.txt  device.cpp  device.hpp  device_cold.cpp  device_cold.hpp  device_default.cpp  device_default.hpp  device_ledger.cpp  device_ledger.hpp  device_trezor.cpp  device_trezor.h  device_trezor.hpp
src/device/trezor/: CMakeLists.txt  bridge.cpp  bridge.h  build_protob.sh  exceptions.cpp  exceptions.h  messages_map.cpp  messages_map.h  messages_map.hpp  protocol.cpp  protocol.h  protocol.hpp  transport.cpp  transport.h  transport.hpp
src/device/trezor/messages/: messages-common.pb.cc  messages-common.pb.h  messages-management.pb.cc  messages-management.pb.h  messages-monero.pb.cc  messages-monero.pb.h  messages.pb.cc  messages.pb.h
src/device/trezor/tools/: README.md  build_protob.py  pb2cpp.py
src/device_trezor/: CMakeLists.txt  device_trezor.cpp  device_trezor.hpp  device_trezor_base.cpp  device_trezor_base.hpp  device_trezor_lite.cpp  device_trezor_lite.hpp  trezor.hpp
src/device_trezor/trezor/: debug_link.cpp  exceptions.cpp  exceptions.hpp  messages_map.cpp  messages_map.hpp  protocol.cpp  protocol.hpp  transport.cpp  transport.hpp  trezor_defs.hpp
src/device_trezor/trezor/messages/: messages-common.pb.cc  messages-common.pb.h  messages-management.pb.cc  messages-monero.pb.cc  messages-monero.pb.h  messages.pb.cc  messages.pb.h
src/device_trezor/trezor/tools/: README.md  build_protob.py  pb2cpp.py
src/hardforks/: hardforks.cpp
src/multisig/: multisig.cpp  multisig.h
src/net/: CMakeLists.txt
src/p2p/: net_node.h  net_node.inl
src/ringct/: bulletproofs.cc  bulletproofs.h  multiexp.cc  rctSigs.cpp  rctSigs.h  rctTypes.cpp  rctTypes.h
src/rpc/: CMakeLists.txt  core_rpc_server.cpp  core_rpc_server.h  core_rpc_server_commands_defs.h  core_rpc_server_error_codes.h  daemon_handler.cpp
src/simpleserialize/: CMakeLists.txt  simpleserialize.cpp  simpleserialize.h
src/simplewallet/: CMakeLists.txt  simplewallet.cpp  simplewallet.h
src/wallet/: CMakeLists.txt  message_transporter.cpp  wallet2.cpp  wallet2.h  wallet_rpc_server.cpp  wallet_rpc_server.h  wallet_rpc_server_commands_defs.h  wallet_rpc_server_error_codes.h
src/wallet/api/: pending_transaction.cpp  unsigned_transaction.cpp  wallet.cpp  wallet.h  wallet2_api.h
tests/: CMakeLists.txt  hash-target.cpp
tests/core_proxy/: CMakeLists.txt  core_proxy.h
tests/core_tests/: CMakeLists.txt  bulletproofs.cpp  chaingen.cpp  chaingen.h  chaingen_main.cpp  multisig.cpp  rct.cpp  rct2.cpp  tx_validation.cpp  wallet_tools.cpp
tests/crypto/: CMakeLists.txt  main.cpp
tests/daemon_tests/: CMakeLists.txt
tests/difficulty/: CMakeLists.txt
tests/functional_tests/: CMakeLists.txt  functional_tests_rpc.py  mining.py  proofs.py  transfer.py
tests/fuzz/: CMakeLists.txt  cold-transaction.cpp
tests/hash/: CMakeLists.txt
tests/libwallet_api_tests/: CMakeLists.txt
tests/net_load_tests/: CMakeLists.txt
tests/performance_tests/: CMakeLists.txt  check_tx_signature.h  construct_tx.h  generate_key_image_helper.h  is_out_to_acc.h  main.cpp
tests/trezor/: CMakeLists.txt  daemon.cpp  daemon.h  http_client.cpp  tools.cpp  tools.h  trezor_tests.cpp  trezor_tests.h
tests/unit_tests/: CMakeLists.txt  epee_utils.cpp  json_serialization.cpp  keccak.cpp  node_server.cpp  ringct.cpp  serialization.cpp
utils/python-rpc/framework/: wallet.py
